--- a/chat/app/config/routing.yml
+++ b/chat/app/config/routing.yml
@@ -1,3 +1,5 @@
-app:
-    resource: @AppBundle/Controller/
-    type:     annotation
+acme_chat:
+    resource: "@AcmeChatBundle/Resources/config/routing.yml"
+    prefix:   /
+
+
