--- a/chat/composer.json
+++ b/chat/composer.json
@@ -17,7 +17,13 @@
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~3.0",
         "sensio/framework-extra-bundle": "~3.0",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "friendsofsymfony/rest-bundle": "1.4.*",
+        "friendsofsymfony/user-bundle": "~2.0@dev",
+        "voryx/restgeneratorbundle": "dev-master",
+        "jms/serializer-bundle": "~0.12",
+        "willdurand/negotiation": "~1.2",
+        "willdurand/jsonp-callback-validator": "~1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
