Added controller for chat messages functionallity, added Doctrine repository for ChatMessage Entity, added routings for path /loadchat, /postmsg, added Nelmio Bundle

--- a/chat/app/config/config.yml
+++ b/chat/app/config/config.yml
@@ -78,3 +78,6 @@ fos_user:
   db_driver: orm
   firewall_name: main
   user_class: Acme\ChatBundle\Entity\User
+
+#Nelmio ApiDoc Bundle
+nelmio_api_doc: ~
