--- a/chat/composer.json
+++ b/chat/composer.json
@@ -23,7 +23,8 @@
         "voryx/restgeneratorbundle": "dev-master",
         "jms/serializer-bundle": "~0.12",
         "willdurand/negotiation": "~1.2",
-        "willdurand/jsonp-callback-validator": "~1.0"
+        "willdurand/jsonp-callback-validator": "~1.0",
+        "nelmio/api-doc-bundle": "2.7.*@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
